--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^6.1.0",
     "bootstrap": "^4.5.0",
-    "ngx-infinite-scroller": "^0.6.3",
+    "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
