Containerized the application with docker

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "docker:build": "docker build -t drbaxr/messenger-web .",
+    "docker:run": "docker run -dp 80:80 drbaxr/messenger-web"
   },
   "private": true,
   "dependencies": {
