--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^6.1.0",
     "bootstrap": "^4.5.0",
+    "ngx-emoji-picker": "^0.1.6",
     "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "twemoji": "^13.0.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
